Updated 01. Deploying to Azure App Service from VS2017 (markdown)

--- a/01.-Deploying-to-Azure-App-Service-from-VS2017.md
+++ b/01.-Deploying-to-Azure-App-Service-from-VS2017.md
@@ -1,4 +1,4 @@
-To deploy the eShopOnWeb sample application to an Azure App Service (assuming you've already cloned or downloaded it locally, and you [have an Azure account](https://azure.microsoft.com/en-us/free/)), follow these steps from Visual Studio 2017 ([see here to start from the Azure Portal](https://github.com/dotnet-architecture/eShopOnWeb/wiki/Deploying-to-Azure-App-Service-from-Azure-Portal)):
+To deploy the eShopOnWeb sample application to an Azure App Service (assuming you've already cloned or downloaded it locally, and you [have an Azure account](https://azure.microsoft.com/en-us/free/)), follow these steps from Visual Studio 2017 ([see here to start from the Azure Portal](https://github.com/dotnet-architecture/eShopOnWeb/wiki/02.-Deploying-to-Azure-App-Service-from-Azure-Portal)):
 
 ## 1. Open the eShopOnWeb solution in Visual Studio 2017.
 
