--- a/03.-Running-as-a-Linux-Container-locally-in-VS-2017.md
+++ b/03.-Running-as-a-Linux-Container-locally-in-VS-2017.md
@@ -12,7 +12,7 @@ To deploy the eShopOnWeb sample to a local Linux Docker container, from Visual S
 
 4. Select `Linux` and click on `OK`.  This will create a new project in your solution called `docker-compose`. This project contains the settings for deploying to Docker. 
 
-![Select Linux from the Docker Support Options](3-2.png)
+![Select Linux in the Docker Support Options dialog](3-2.png)
 
 5. Open the `docker-compose.override.yml` from the `docker-compose` project and change the line that reads `80` to read `5106`. This is the port eShopOnWeb is configured to run on. (See the `Program.cs` file for details)
 
@@ -26,6 +26,6 @@ To deploy the eShopOnWeb sample to a local Linux Docker container, from Visual S
 
 ## Trouble Shooting
 
-You may encouter an error if your Docker for Windows is configured to run Windows containers. This setting change be changed by right clicking on the tray icon 
+You may encounter an error if your Docker for Windows is configured to run Windows containers. This setting change be changed by right clicking on the tray icon and selecting `Switch to Linux containers`
 
 ![Change the sort of containers docker uses by default.](3-5.png)
