Adding article on running linux containers on app services

--- a/05.-Running-locally-on-a-windows-container-from-VS-2017.md
+++ b/05.-Running-locally-on-a-windows-container-from-VS-2017.md
@@ -18,7 +18,7 @@ To deploy the eShopOnWeb sample to a local Windows Docker container, from Visual
 
 ![Update the port override.](5-3.png)
 
-6. Find the name of the running container. (Windows containers currently have a limitation when working with Network Address Translation and localhost. It is expected to be corrected as the ecosystem evolves).  To find the name open a command prompt and run 
+6. Find the name of the running container. (Windows containers currently have a limitation when working with Network Address Translation and localhost. It is expected to be corrected as the ecosystem evolves. [Details](https://docs.docker.com/docker-for-windows/troubleshoot/#limitations-of-windows-containers-for-localhost-and-published-ports)).  To find the name open a command prompt and run 
 
 ```
 docker ps
