Fixing name mismatch

--- a/04.-Deploying-as-a-Linux-container-into-Azure-App-Services.md
+++ b/04.-Deploying-as-a-Linux-container-into-Azure-App-Services.md
@@ -1,6 +1,6 @@
-# Running Locally on a Linux Container from VS2017
+# Deploying as a Linux container into Azure App Services
 
-To deploy the eShopOnWeb sample to a local Linux Docker container, from Visual Studio 2017, follow these step-by-step instructions:
+To deploy the eShopOnWeb sample to Linux Docker container on Azure App Services, from Visual Studio 2017, follow these step-by-step instructions:
 
 1. Clone or download the eShopOnWeb sample to a folder on your local machine.
 
