Fixing spelling of troubleshooting

--- a/03.-Running-as-a-Linux-Container-locally-in-VS-2017.md
+++ b/03.-Running-as-a-Linux-Container-locally-in-VS-2017.md
@@ -24,7 +24,7 @@ To deploy the eShopOnWeb sample to a local Linux Docker container, from Visual S
 
 ![The eShopOnline web application running in a Linux container](3-4.png)
 
-## Trouble Shooting
+## Troubleshooting
 
 You may encounter an error if your Docker for Windows is configured to run Windows containers. This setting change be changed by right clicking on the tray icon and selecting `Switch to Linux containers`
 
