--- a/05.-Running-locally-on-a-windows-container-from-VS-2017.md
+++ b/05.-Running-locally-on-a-windows-container-from-VS-2017.md
@@ -45,7 +45,7 @@ docker inspect [[container name from previous step]] --format='{{range .NetworkS
 
 ![The eShopOnline web application running in a Linux container](3-4.png)
 
-## Trouble Shooting
+## Troubleshooting
 
 You may encounter an error if your Docker for Windows is configured to run Linux containers. This setting change be changed by right clicking on the tray icon and selecting `Switch to Windows containers`
 
