--- a/05.-Running-locally-on-a-windows-container-from-VS-2017.md
+++ b/05.-Running-locally-on-a-windows-container-from-VS-2017.md
@@ -47,6 +47,6 @@ docker inspect [[container name from previous step]] --format='{{range .NetworkS
 
 ## Troubleshooting
 
-You may encounter an error if your Docker for Windows is configured to run Linux containers. This setting change be changed by right clicking on the tray icon and selecting `Switch to Windows containers`
+You may encounter an error if your Docker for Windows is configured to run Linux containers. This setting may be changed by right clicking on the tray icon and selecting `Switch to Windows containers`
 
 ![Change the sort of containers docker uses by default.](3-5.png)
