Adding most of the rest of running on windows

--- a/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
+++ b/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
@@ -1,5 +1,7 @@
 To deploy the eShopOnWeb sample to a Windows 2016 virtual machine running Docker on Azure, from Visual Studio 2017, follow these step-by-step instructions:
 
+## Provisioning a Virtual Machine to Host Docker
+
 1. Log into Azure and click on the plus symbol(`+`) to create a new resource. Then select `compute` and `see all`
 
 ![Add `+` then compute and see all.](6-1.png)
@@ -24,18 +26,114 @@ To deploy the eShopOnWeb sample to a Windows 2016 virtual machine running Docker
 
 ![Add a new security group rule](6-6.png)
 
-7. Create a rule to expose the Docker agent port, 2375, by entering a name for the rule, a priority and the port.
+7. Create a rule to expose the Docker agent port, 2375, by entering a name for the rule, a priority and the port. Click `Ok`
 
 ![Add a rule for the Docker agent](6-7.png)
 
 
-8. Create a rule to expose the Web Server which will be running on the Docker agent. Entering a name for the rule, a priority and select `HTTP` from the `Service` drop down.
+8. Create a rule to expose the Web Server which will be running on the Docker agent. Entering a name for the rule, a priority and select `HTTP` from the `Service` drop down. Click `Ok`
 
 ![Add a rule for the web server](6-8.png)
 
+9. Click `Ok` on the settings blade
+10. On the purchase blade click `Purchase`
 
+![Click on purchase](6-9.png)
 
-. Create new VM
-2. Unblock port in azure firewall
+11. The virtual machine will now be provisioned. Click on `Virtual Machiens` and then select your new virtual machine. 
+
+![Click on virtual machines and then your newly provisioned machine](6-10.png)
+
+12. Click on `Connect` to download the remote connection file for the virtual machine. 
+
+![Download the connection file](6-11.png)
+
+## Configuring Docker on the Virtual Machine
+
+1. Launch the connection by clicking on the downloaded connection file
+
+![Launching the connection](6-12.png)
+
+2. Agree to connect 
+
+![Connection](6-13.png)
+
+3. Enter the password and user name recorded earlier. You may need to click on `More Choices` to access the user name and password boxes. Click on `OK`
+
+![Enter the user name and password](6-14.png)
+
+4. The firewall on the server must now have ports opened to allow access to the Docker daemon and container. Click on the start menu and enter `firewall` then click on the `Windows Firewall with Advanced Security`
+
+![Search for firewall and click on the Windows Firewall](6-15.png)
+
+5. In the firewall settings click on `Inbound Rules` then `New Rule...`
+
+![Click Inbound Rule and then New Rule](6-16.png)
+
+6. Select `Port` as the rule type and click `Next`
+
+![Set port as the type of firewall](6-17.png)
+
+7. Select `Specific local ports` and enter `2375`. Click `Next`
+
+![Enter port 2375](6-18.png) 
+
+8. Select `Allow the connection` and click `Next`
+
+![Allow the connection](6-19.png) 
+
+9. Leave the settings on the Profile page unchanged and click `Next`
+
+![Leave settings unchanged](6-20.png) 
+
+10. Enter a name such as `Docker` for the firewall rule and click `Finish`
+
+![Enter name for the rule and click next](6-21.png) 
+
+11. In the firewall settings click on `Inbound Rules` then `New Rule...`
+
+![Click Inbound Rule and then New Rule](6-16.png)
+
+12. Select `Port` as the rule type and click `Next`
+
+![Set port as the type of firewall](6-17.png)
+
+13. Select `Specific local ports` and enter `80`. Click `Next`
+
+![Enter port 80](6-22.png) 
+
+14. Select `Allow the connection` and click `Next`
+
+![Allow the connection](6-19.png) 
+
+15. Leave the settings on the Profile page unchanged and click `Next`
+
+![Leave settings unchanged](6-20.png) 
+
+16. Enter a name such as `Web` for the firewall rule and click `Finish`
+
+![Enter name for the rule and click next](6-23.png) 
+
+17. By default the Docker daemon doesn't listen on external ports so we need to enable that. Open an administrative powershell window and enter 
+
+    ```
+    stop-service docker
+    &"C:\Program Files\Docker\dockerd.exe" -H tcp://0.0.0.0:2375
+    ```
+
+    ![Docker daemon running on Windows Server 2016](6-24.png) 
+
+    The server should now be set up to allow remote Docker connections. **Note**: It is not secure to run the Docker daemon exposed to the Internet and without any authentication. For the purposes of this tutorial we'll allow it but in real world applications [other approaches are recommended](https://docs.docker.com/engine/security/https/).  
+
+## Configure Your Computer to Talk to Docker on the Virtual Machine
+
+Your computer needs to be configured to talk to the Docker daemon on the virtual machine that was just set up. To do this we'll need to set an environment variable pointing Docker to the remote daemon. 
+
+18. Click on the `start` button and search for `computer`. Right click on `This PC` and select `properties`
+
+![Open This PC properties](6-25.png)
+
+## Configure the 
+
 3. Unblock in windows
 4. 
