--- a/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
+++ b/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
@@ -129,11 +129,56 @@ To deploy the eShopOnWeb sample to a Windows 2016 virtual machine running Docker
 
 Your computer needs to be configured to talk to the Docker daemon on the virtual machine that was just set up. To do this we'll need to set an environment variable pointing Docker to the remote daemon. 
 
-18. Click on the `start` button and search for `computer`. Right click on `This PC` and select `properties`
+1. Click on the `start` button and search for `computer`. Right click on `This PC` and select `properties`
 
 ![Open This PC properties](6-25.png)
 
-## Configure the 
+2. Select `Advanced system settings`
 
-3. Unblock in windows
-4. 
+![Advanced system settings](6-26.png)
+
+3. Click `Environment Variables`
+
+![Environment Variables](6-27.png)
+
+4. Add a new system variable called `DOCKER_HOST` set it to be `tcp://<ip address of your virtual machine>:2375`
+
+![Advanced system settings](6-28.png)
+
+## Build and Run the Container 
+
+1. Clone or download the eShopOnWeb sample to a folder on your local machine.
+
+2. Ensure the computer on which you're running has Windows containers enabled. You can read how perform the one-time setup on the [Docker Blog](https://blog.docker.com/2016/09/build-your-first-docker-windows-server-container/)
+
+3. Right click on the `Web` project in Visual Studio and select the `Add` menu then `Docker Support`  
+
+![Add docker support by clicking Add > RuDocker Support.](5-1.png)
+
+4. Select `Windows` and click on `OK`.  This will create a new project in your solution called `docker-compose`. This project contains the settings for deploying to Docker. 
+
+![Select Windows in the Docker Support Options dialog](5-2.png)
+
+
+5. Update the `Program.cs` to listen to port 80 rather than port 5106. Change the line 
+
+```
+.UseUrls("http://0.0.0.0:5106")
+```
+
+to
+
+```
+.UseUrls("http://0.0.0.0:80")
+```
+
+6. Build the project under `Release` configuration. This will deploy the image to the remote Docker daemon
+
+7. Open an instance of powershell and run 
+
+```
+  docker run -p <ip address of your virtual machine>:80:80 web -t
+```
+
+8. Direct your web browser to http://<ip address of your virtual machine>. You should see an instance of the eShopOnline site running
+
