--- a/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
+++ b/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
@@ -1,6 +1,6 @@
 To deploy the eShopOnWeb sample to a Windows 2016 virtual machine running Docker on Azure, from Visual Studio 2017, follow these step-by-step instructions:
 
-## Provisioning a Virtual Machine to Host Docker
+## Provision a Virtual Machine to Host Docker
 
 1. Log into Azure and click on the plus symbol(`+`) to create a new resource. Then select `compute` and `see all`
 
@@ -44,7 +44,7 @@ To deploy the eShopOnWeb sample to a Windows 2016 virtual machine running Docker
 
 ![Click on virtual machines and then your newly provisioned machine](6-10.png)
 
-12. Click on `Connect` to download the remote connection file for the virtual machine. 
+12. Click on `Connect` to download the remote connection file for the virtual machine. You may also wish to record the IP address of your machine at this time - it will be needed later.
 
 ![Download the connection file](6-11.png)
 
@@ -182,3 +182,4 @@ to
 
 8. Direct your web browser to http://<ip address of your virtual machine>. You should see an instance of the eShopOnline site running
 
+![The site running in a windows container](6-29.png)
