Simplifying some windows docker stuff

--- a/05.-Running-locally-on-a-windows-container-from-VS-2017.md
+++ b/05.-Running-locally-on-a-windows-container-from-VS-2017.md
@@ -18,32 +18,11 @@ To deploy the eShopOnWeb sample to a local Windows Docker container, from Visual
 
 ![Update the port override.](5-3.png)
 
-6. Find the name of the running container. (Windows containers currently have a limitation when working with Network Address Translation and localhost. It is expected to be corrected as the ecosystem evolves. [Details](https://docs.docker.com/docker-for-windows/troubleshoot/#limitations-of-windows-containers-for-localhost-and-published-ports)).  To find the name open a command prompt and run 
+6. Press `F5` to run the project or select `Debug` > `Start Debugging` from the menu.
 
-```
-docker ps
-```
+7. Your default browser will start on a random port on you IP address which is forwarded to the docker container. 
 
-This should give output similar to 
-
-```
-CONTAINER ID        IMAGE               COMMAND                  CREATED             STATUS
-          PORTS                             NAMES
-9dbd37174f6c        web:dev             "powershell -Comma..."   2 minutes ago      Up 2 minutes       80/tcp, 0.0.0.0:29887->5106/tcp   dockercompose3095019296207330533_web_1
-```
-
-The final field starting with `dockercompose...` is the name of the running container.
-
-7. Find the ip address of the running container by entering 
-
-```
-docker inspect [[container name from previous step]] --format='{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}'
-```
-
-
-8. Open a web browser and enter the IP address from the previous step in the URL along with port `5106`. For instance if the given IP is `172.22.158.132` then the URL should be `http://172.22.158.132:5106/`
-
-![The eShopOnline web application running in a Linux container](5-4.png)
+![The eShopOnline web application running in a Windows container](5-4.png)
 
 ## Troubleshooting
 
