Changing approach on port forwarding

--- a/04.-Deploying-as-a-Linux-container-into-Azure-App-Services.md
+++ b/04.-Deploying-as-a-Linux-container-into-Azure-App-Services.md
@@ -14,16 +14,18 @@ To deploy the eShopOnWeb sample to Linux Docker container on Azure App Services,
 
 ![Select Linux in the Docker Support Options dialog](4-2.png)
 
-5. Update the `Program.cs` to listen to port 80 rather than port 5106. Change the line 
+5. Update the `docker-compose.yml` to listen to forward port 80 to port 5106. Change the line 
 
 ```
-.UseUrls("http://0.0.0.0:5106")
+ports:
+      - "80"
 ```
 
 to
 
 ```
-.UseUrls("http://0.0.0.0:80")
+ports:
+      - "80:5106"
 ```
 
 6. Right click on the `Web` project and select publish
