--- a/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
+++ b/06.-Deploying-as-a-Windows-Container-into-a-Windows-Container-host-in-Azure.md
@@ -160,16 +160,18 @@ Your computer needs to be configured to talk to the Docker daemon on the virtual
 ![Select Windows in the Docker Support Options dialog](5-2.png)
 
 
-5. Update the `Program.cs` to listen to port 80 rather than port 5106. Change the line 
+5. Update the `docker-compose.yml` to listen to forward port 80 to port 5106. Change the line 
 
 ```
-.UseUrls("http://0.0.0.0:5106")
+ports:
+      - "80"
 ```
 
 to
 
 ```
-.UseUrls("http://0.0.0.0:80")
+ports:
+      - "80:5106"
 ```
 
 6. Build the project under `Release` configuration. This will deploy the image to the remote Docker daemon
